hy-jenkins-helm-all.yaml
---
# Source: jenkins/templates/jenkins-agent-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-agent
  labels:
    app: jenkins
    chart: "jenkins-0.14.0"
    component: "jenkins-jenkins-master"
spec:
  ports:
    - port: 50000
      targetPort: 50000
      name: slavelistener
  selector:
    component: "jenkins-jenkins-master"
  type: ClusterIP

---
# Source: jenkins/templates/jenkins-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: jenkins
    heritage: "Tiller"
    release: "jenkins"
    chart: "jenkins-0.14.0"
    component: "jenkins-jenkins-master"
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
      
  selector:
    component: "jenkins-jenkins-master"
  type: NodePort
  

---
# Source: jenkins/templates/jenkins-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "jenkins-ui-test-skyxe"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: jenkins-ui-test
      image: jenkins/jenkins:lts
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
      - mountPath: /tests
        name: tests
        readOnly: true
      - mountPath: /tools
        name: tools
  volumes:
  - name: tests
    configMap:
      name: jenkins-tests
  - name: tools
    emptyDir: {}
  restartPolicy: Never

---
# Source: jenkins/templates/jenkins-master-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
  labels:
    heritage: "Tiller"
    release: "jenkins"
    chart: "jenkins-0.14.0"
    component: "jenkins-jenkins-master"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      component: "jenkins-jenkins-master"
  template:
    metadata:
      labels:
        app: jenkins
        heritage: "Tiller"
        release: "jenkins"
        chart: "jenkins-0.14.0"
        component: "jenkins-jenkins-master"
      annotations:
        checksum/config: 099799d0d6a6b4d9f6e1faaff2907197f7e46a58b507ea2d4f86e0ec519254dc
    spec:
      securityContext:
        runAsUser: 0
      serviceAccountName: "default"
      containers:
        - name: jenkins
          image: "jenkins/jenkins:lts"
          imagePullPolicy: "Always"
          args: [ "--argumentsRealm.passwd.$(ADMIN_USER)=$(ADMIN_PASSWORD)",  "--argumentsRealm.roles.$(ADMIN_USER)=admin"]
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 50000
              name: slavelistener
          livenessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 60
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
          volumeMounts:
            -
              mountPath: /var/jenkins_home
              name: jenkins-home
              readOnly: false
            -
              mountPath: /var/jenkins_config
              name: jenkins-config
              readOnly: true
            -
              mountPath: /usr/share/jenkins/ref/plugins/
              name: plugin-dir
              readOnly: false
            -
              mountPath: /usr/share/jenkins/ref/secrets/
              name: secrets-dir
              readOnly: false
      volumes:
      - name: jenkins-config
        configMap:
          name: jenkins
      - name: plugin-dir
        emptyDir: {}
      - name: secrets-dir
        emptyDir: {}
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-helm-pvc
---
# Source: jenkins/templates/jenkins-master-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
spec:
  rules:
  - host: "mybuild.skhy.com"
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080

---
# Source: jenkins/templates/home-pvc.yaml


---
# Source: jenkins/templates/jenkins-master-networkpolicy.yaml


---
# Source: jenkins/templates/jobs.yaml

---
# Source: jenkins/templates/rbac.yaml

---
# Source: jenkins/templates/service-account.yaml
